--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <a class="smallcaps" href="https://twitter.com/maddiesimens" target="_blank">TWITTER</a><br>
             <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens" target="_blank">LINKEDIN</a><br>
             <a class="smallcaps" href="http://instagram.com/maddie_simens" target="_blank">INSTAGRAM</a><br>
-            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a>
-            <!-- <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br> -->
+            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a><br>
+            <a class="smallcaps" href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
             </p>
         </div>
 
