--- a/index.html
+++ b/index.html
@@ -22,57 +22,64 @@
   <body>
 
     <div id="splash">
-      <header>
-        <div id="intro">
-          <h1>
-          <span class="medium">Hi, I'm Maddie Simens.</span><br>
-          I'm a student and product<br>
-          designer based in Boston, MA.</h1>
-          </h1>
-          <div class="separator" id="first"></div>
-        </div>
-      </header>
+      <div class="wrapper">
+        <header>
+          <div id="intro">
+            <h1>
+            <span class="medium">Hi, I'm Maddie Simens.</span><br>
+            I'm a student and product<br>
+            designer based in Boston, MA.</h1>
+            </h1>
+            <div class="separator" id="first"></div>
+          </div>
+        </header>
+      </div>
     </div>
 
       <div id="about">
-        <div id="headline">
-          <h2>
-          I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
+        <div class="wrapper">
+          <div id="headline">
+            <h2>
+            I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
+            </h2>
+          </div>
+
+          <div id="experience">
+            <div class="separator" id="second"></div>
+            <p>
+            <span style="line-height:3">I've spent some time:</span><br>
+            +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com" target="_blank">Rdio</a> and <a href="http://wistia.com" target="_blank">Wistia</a><br>
+            +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs" target="_blank">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com" target="_blank">LaunchHouse Accelerator</a><br>
+            +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a><br>
+            +&nbsp; Obsessing over photography, film, interior design, and the Lord of the Rings
+            </p>
+          </div>
+
+          <div id="social">
+            <div class="separator" id="third"></div>
+              <p class="smallcaps">
+              <a class="smallcaps" href="https://twitter.com/maddiesimens" target="_blank">TWITTER</a><br>
+              <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens" target="_blank">LINKEDIN</a><br>
+              <a class="smallcaps" href="http://instagram.com/maddie_simens" target="_blank">INSTAGRAM</a><br>
+              <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a><br>
+              <a class="smallcaps" href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
+              </p>
+          </div>
+
+          <h2 id="contact">
+          I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi" target="_blank">maddiesimens@gmail.com</a>
           </h2>
         </div>
-
-        <div id="experience">
-          <div class="separator" id="second"></div>
-          <p>
-          <span style="line-height:3">I've spent some time:</span><br>
-          +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com" target="_blank">Rdio</a> and <a href="http://wistia.com" target="_blank">Wistia</a><br>
-          +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs" target="_blank">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com" target="_blank">LaunchHouse Accelerator</a><br>
-          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a><br>
-          +&nbsp; Obsessing over photography, film, interior design, and the Lord of the Rings
-          </p>
-        </div>
-
-        <div id="social">
-          <div class="separator" id="third"></div>
-            <p class="smallcaps">
-            <a class="smallcaps" href="https://twitter.com/maddiesimens" target="_blank">TWITTER</a><br>
-            <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens" target="_blank">LINKEDIN</a><br>
-            <a class="smallcaps" href="http://instagram.com/maddie_simens" target="_blank">INSTAGRAM</a><br>
-            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a><br>
-            <a class="smallcaps" href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
-            </p>
-        </div>
-
-        <h2 id="contact">
-        I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi" target="_blank">maddiesimens@gmail.com</a>
-        </h2>
       </div>
 
       <footer>
-        <p class="smallcaps" id="copyright">
-          &copy; 2015 Maddie Simens
-        </p>
+        <div class="wrapper">
+          <p class="smallcaps" id="copyright">
+            &copy; 2015 Maddie Simens
+          </p>
+        </div>
       </footer>
+      </div>
       </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
