--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Maddie Simens</title>
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6978754/648086/css/fonts.css" />
-    <link rel="stylesheet" href="css/animate.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,7 +25,7 @@
     <div id="splash">
       <div class="wrapper">
         <header>
-          <div class="animated fadeInUp" id="intro">
+          <div class="animated fadeInDown" id="intro">
             <h1>
             <span class="medium">Hi, I'm Maddie Simens.</span><br>
             I'm a student and product<br>
