add animation delay to intro

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div id="splash">
       <div class="wrapper">
         <header>
-          <div class="animated fadeInDown" id="intro">
-            <h1>
+          <div id="intro">
+            <h1 class="animated fadeInDown">
             <span class="medium">Hi, I'm Maddie Simens.</span><br>
             I'm a student and product<br>
-            designer based in Boston, MA.</h1>
+            designer based in Boston, MA.
             </h1>
-            <div class="separator" id="first"></div>
+            <div class="separator animated fadeInSecond" id="first"></div>
           </div>
         </header>
       </div>
