--- a/index.html
+++ b/index.html
@@ -1,87 +1,94 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Maddie Simens</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6978754/648086/css/fonts.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Maddie Simens</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-      ga('create', 'UA-48335777-1', 'auto');
-      ga('send', 'pageview');
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </script>
-  </head>
-  <body>
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-    <div id="splash">
-      <div class="wrapper">
-        <header>
-          <div id="intro">
-            <h1 class="animated fadeInDown">
-            <span class="medium">Hi, I'm Maddie Simens.</span><br>
-            I'm a student and product<br>
-            designer based in Boston, MA.
-            </h1>
-            <div class="separator animated fadeInSecond" id="first"></div>
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/animate.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+      <nav>
+        <div class="row">
+          <div class="twelve columns">
+            <a href="index.html" class="alignleft">Maddie Simens</a>
+            <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="alignright" id="nav_email">maddiesimens@gmail.com</a>
+            <img src="images/nav_email.png" class="alignright" id="nav_email_icon">
+            <div style="clear: both;"></div>
           </div>
-        </header>
-      </div>
-    </div>
+        </div>
+      </nav>
 
-      <div id="about">
-        <div class="wrapper">
-          <div id="headline">
-            <h2>
-            I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
-            </h2>
-          </div>
+      <h1>Hey, I'm Maddie.<br>Product design is my thing.</h1>
 
-          <div id="experience">
-            <div class="separator" id="second"></div>
-            <p>
-            <span style="line-height:3">I've spent some time:</span><br>
-            +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com" target="_blank">Rdio</a> and <a href="http://wistia.com" target="_blank">Wistia</a><br>
-            +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs" target="_blank">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com" target="_blank">LaunchHouse Accelerator</a><br>
-            +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a><br>
-            +&nbsp; Obsessing over photography, film, interior design, and the Lord of the Rings
-            </p>
-          </div>
-
-          <div id="social">
-            <div class="separator" id="third"></div>
-              <p class="smallcaps">
-              <a class="smallcaps" href="https://twitter.com/maddiesimens" target="_blank">TWITTER</a><br>
-              <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens" target="_blank">LINKEDIN</a><br>
-              <a class="smallcaps" href="http://instagram.com/maddie_simens" target="_blank">INSTAGRAM</a><br>
-              <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a><br>
-              <a class="smallcaps" href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
-              </p>
-          </div>
-
-          <h2 id="contact">
-          I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi" target="_blank">maddiesimens@gmail.com</a>
-          </h2>
+      <div class="row" id="thumb_container">
+        <div class="four columns thumb">
+          <a href="wistia.html"><img src="images/preview1.png" class="u-max-full-width"></a>
+        </div>
+        <div class="four columns thumb">
+          <img src="images/preview2.png" class="u-max-full-width" id="rdio">
+        </div>
+        <div class="four columns thumb">
+          <img src="images/preview3.png" class="u-max-full-width" id="other">
         </div>
       </div>
 
-      <footer>
-        <div class="wrapper">
-          <p class="smallcaps" id="copyright">
-            &copy; 2015 Maddie Simens
+      <div class="separator"></div>
+
+      <div class="row" id="text_container">
+        <div class="four columns textrow">
+          <h2>Above all, I strive to be<br>thoughtful in my work.</h2>
+          <p>To me, thoughtful design is well-considered—
+          driven by strong opinions, loosely held. It is propelled by curiosity and constantly asking questions. When done right, it feels human.</p>
+        </div>
+        <div class="four columns textrow">
+          <p>I’ve spent some time learning to make the Internet a little more human at <a href="http://wistia.com/" target="_blank">Wistia</a> and Rdio. As a result, my experience lies in both consumer and enterprise design across mobile and web platforms. (Between you and me, I think mobile is my favorite.) I’m also into interior design and amateur photography.</p>
+        </div>
+        <div class="four columns textrow">
+          <p>This May, I’ll graduate from Northeastern with a degree in Business and Interaction Design, which roughly translates to “how to define problems and then solve them.” I’m currently exploring opportunities for a full-time position after graduation. Want to chat? Drop me a line at <a href="mailto:maddiesimens@gmail.com?subject=Hello">maddiesimens@gmail.com</a>.  
           </p>
         </div>
+      </div>
+
+      <div class="separator"></div>
+
+      <footer>
+        <a href="https://twitter.com/maddiesimens"><img src="images/twitter.png" style="width:21px;"></a>    
+        <a href="https://www.instagram.com/maddie_simens/"><img src="images/instagram.png" style="width:19px;"></a>
+        <a href="https://www.linkedin.com/in/madelinesimens"><img src="images/linkedin.png" style="width:21px;"></a>
+        <a href="mailto:maddiesimens@gmail.com?subject=Hello"><img src="images/email.png" style="width:22px; padding-top:2px;"></a>
       </footer>
+
+
       </div>
-      </div>
-    <script src="javascripts/scale.fix.js"></script>
-  </body>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
