Added Rdio and Other under construction pages

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/main.css">
@@ -49,13 +45,13 @@
 
       <div class="row" id="thumb_container">
         <div class="four columns thumb">
-          <a href="wistia.html"><img src="images/preview1.png" class="u-max-full-width"></a>
+        <a href="wistia.html"><img src="images/preview1.png" class="u-max-full-width"></a>
         </div>
         <div class="four columns thumb">
-          <img src="images/preview2.png" class="u-max-full-width" id="rdio">
+          <a href="rdio.html"><img src="images/preview2.png" class="u-max-full-width" id="rdio"></a>
         </div>
         <div class="four columns thumb">
-          <img src="images/preview3.png" class="u-max-full-width" id="other">
+          <a href="other.html"><img src="images/preview3.png" class="u-max-full-width" id="other"></a>
         </div>
       </div>
 
