Make Read More section responsive

--- a/wistia.html
+++ b/wistia.html
@@ -302,17 +302,17 @@
               <div class="offset-by-two eight columns">
                 <h6>READ MORE ABOUT MY WORK AT WISTIA</h6>
                 <div class="separator"></div>
-                <a href="http://wistia.com/blog/product-update-video-analytics" target="_blank" onclick="trackOutboundLink('http://wistia.com/blog/product-update-video-analytics'); return false;">
+                <a href="http://wistia.com/blog/product-update-video-analytics" target="_blank" onclick="trackOutboundLink('http://wistia.com/blog/product-update-video-analytics');">
                   <img src="images/wistia_blog1.jpg" class="alignright thumb">
                   <h7>New Stats Are Here: Video Analytics Get a Major Update</h7>
                   <h8>Read about the launch on the Wistia Blog.</h8>
                 </a>
                 <div style="clear: both;"></div>
                 <div class="separator"></div>
-                <a href="http://wistia.com/blog/designing-new-login-page" target="_blank" onclick="trackOutboundLink('http://wistia.com/blog/designing-new-login-page'); return false;">
+                <a href="http://wistia.com/blog/designing-new-login-page" target="_blank" onclick="trackOutboundLink('http://wistia.com/blog/designing-new-login-page');">
                   <img src="images/wistia_blog2.jpg" class="alignright thumb">
                   <h7>Login Facelift: Designing a First Impression</h7>
-                  <h8>A mini case study on another project.</h8>
+                  <h8>My mini case study on another project.</h8>
                 </a>
                 <div style="clear: both;"></div>
                 <div class="separator"></div>
@@ -321,8 +321,6 @@
             </div>
           </div>
         </div>
-      
-
 
       <footer>
         <a href="https://twitter.com/maddiesimens"><img src="images/twitter.png" style="width:21px;"></a>    
