--- a/rdio.html
+++ b/rdio.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Rdio</title>
+  <title>Wistia</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,9 +15,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/skeleton-16col.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/animate.css">
 
   <!-- Favicon
@@ -49,32 +49,40 @@
 </head>
 <body id="rdio">
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+<!-- Primary Page Layout
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  
+<div class="splash_rdio">
     <div class="container wistia">
         <nav>
-          <div class="row">
-            <div class="twelve columns">
-              <a href="index.html" class="alignleft">Maddie Simens</a>
-              <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="alignright" id="nav_email">maddiesimens@gmail.com</a>
-              <img src="images/email_white.png" class="alignright" id="nav_email_icon">
+          <div class="row group">
+            <div class="sixteen columns">
+              <div class="alignleft">
+                <a href="index.html">Maddie Simens</a>
+              </div>
+              <div class="alignright">
+                <a href="index.html">Work</a>
+                <a href="about.html">About</a>
+                <a href="mailto:maddiesimens@gmail.com?subject=Hello">
+                  <img src="images/email_white.png" class="alignright" id="nav_email_icon">
+                </a>
+              </div>
               <div style="clear: both;"></div>
-            </div>
           </div>
-        </nav>
-          <div class="row">
-            <div class="offset-by-one ten columns">
-              <div class="spacer"></div>
-              <h3>Rdio</h3>
-              <div class="subtitle">Case study coming soon.</span></div>
-            </div>
-          </div>
+        </div>
+      </nav>
+      <div class="row group">
+        <div class="sixteen columns">
+          <h3>Rdio</h3>
+          <div class="subtitle">Case study coming soon.</span></div>
+          <img src="images/rdio_splash.png" id="audience_splash">
+        </div>
       </div>
     </div>
+  </div>
 
 
-    <!-- End Document
+<!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
