Update other page

--- a/other.html
+++ b/other.html
@@ -17,7 +17,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/skeleton-16col.css">
   <link rel="stylesheet" href="css/animate.css">
 
   <!-- Favicon
@@ -52,26 +52,33 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <div class="container wistia">
-        <nav>
-          <div class="row">
-            <div class="twelve columns">
-              <a href="index.html" class="alignleft">Maddie Simens</a>
-              <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="alignright" id="nav_email">maddiesimens@gmail.com</a>
-              <img src="images/email_white.png" class="alignright" id="nav_email_icon">
-              <div style="clear: both;"></div>
+  <div class="container wistia">
+      <nav>
+        <div class="row group">
+          <div class="sixteen columns">
+            <div class="alignleft">
+              <a href="index.html">Maddie Simens</a>
             </div>
-          </div>
-        </nav>
-          <div class="row">
-            <div class="offset-by-one ten columns">
-              <div class="spacer"></div>
-              <h3>Other</h3>
-              <div class="subtitle">More miscellaneous work coming soon.</span></div>
+            <div class="alignright">
+              <a href="index.html">Work</a>
+              <a href="about.html">About</a>
+              <a href="mailto:maddiesimens@gmail.com?subject=Hello">
+                <img src="images/email_white.png" class="alignright" id="nav_email_icon">
+              </a>
             </div>
-          </div>
+            <div style="clear: both;"></div>
+        </div>
+      </div>
+    </nav>
+    <div class="row group">
+      <div class="sixteen columns">
+        <div class="spacer"></div>
+        <h3>Miscellaneous</h3>
+        <div class="subtitle">More work coming soon.</span></div>
       </div>
     </div>
+  </div>
+</div>
 
 
     <!-- End Document
