--- a/index.html
+++ b/index.html
@@ -78,21 +78,23 @@
 
       <div class="row group">
         <div class="eight columns thumb">
-          <a href="wistia.html"><img src="images/preview1.png" class="u-max-full-width"></a>
+          <a href="wistia.html"><img src="images/preview1.png" class="u-max-full-width animated fadeIn one"></a>
           <h9>Wistia</h9>
         </div>
         <div class="eight columns thumb">
-          <a href="rdio.html"><img src="images/preview2.png" class="u-max-full-width"></a>
+          <a href="rdio.html"><img src="images/preview2.png" class="u-max-full-width animated fadeIn two"></a>
           <h9>&nbsp; &nbsp; Rdio</h9>
         </div>
         <div class="eight columns thumb">
-          <a href="other.html"><img src="images/preview3.png" class="u-max-full-width"></a>
+          <a href="other.html"><img src="images/preview3.png" class="u-max-full-width animated fadeIn three"></a>
           <h9>Other</h9>
         </div>
         <div class="eight columns thumb" id="preview4">
           <a href="mailto:maddiesimens@gmail.com?subject=Hello" onclick="trackOutboundLink('mailto:maddiesimens@gmail.com?subject=Hello');">
+          <div class=" animated fadeIn four">
             <img src="images/preview4.png" class="u-max-full-width">
             <div id="cta">I've met some of my favorite<br>people over a cup of coffee.<br><br><span style="text-decoration:underline;">maddiesimens@gmail.com</span></div>
+          </div>
           </a>
       </div>
 
