--- a/wistia.html
+++ b/wistia.html
@@ -74,7 +74,7 @@
       <div class="row group">
         <div class="sixteen columns">
           <h3>Wistia</h3>
-          <div class="subtitle">Helping businesses do more with video</span></div>
+          <div class="subtitle">Helping businesses do more with video</div>
           <img src="images/audience_splash.png" id="audience_splash">
         </div>
       </div>
@@ -163,7 +163,6 @@
   <div class="container wistia">
   <div class="row group">
     <div class="offset-by-two twelve columns">
-      <br>
       <h5>The Solution</h5>
       <p>The final design maintains the identity system of its predecessors with a few notable interface changes. Most importantly, it fits the original dimensions thanks to the addition of an expanding drawer. When closed, a heatmap displays two lines of the most valuable available information and reveals the rest upon expansion. We prioritized the placement of each piece of data (and validated our original choice of which to introduce) by running a test in which our users were asked to rank the data in order of importance. Moving the timestamp outside of the heatmap helps to further declutter and increase readability, making it easier for users to parse. Changing the avatar from a bubble to a square supports the smaller size by eliminating the need for padding and also felt decidedly more true to Wistia’s highly geometric UI style. The mobile icon makes it easy for users to quickly get a sense of where their audience is watching video.</p><br>
 
@@ -189,7 +188,6 @@
   <div class="container wistia">
     <div class="offset-by-two twelve columns">
     <section id="audience" data-anchor="audience">
-      <br>
       <h4>Audience</h4>
       <h5>Background</h5>
       <p>Wistia has always <a href="http://www.wistia.com/blog/beyond-funnelvision" target="_blank">believed in using video to build an engaged audience</a> over focusing solely on views and virality. The beauty of video marketing is its ability to reach out through a screen and say “Hey, we’re just a bunch of humans too.” Done right, it can build trust and an incredibly strong connection with your viewers. We’ve talked about this quite a bit in our external learning resources, but up until recently, didn’t really have a great reflection of our audience-centric approach in the app itself.</p><br>
@@ -251,9 +249,9 @@
       <br><br>
       <h4>Stats Report</h4>
       <h5>Background</h5>
-      <p>If you use enterprise SaaS products, I’d wager that the majority of them have some sort of daily/weekly/monthly summary email. Even some consumer products are getting in on the engagement-boosting action. It may come as a surprise then that Wistia, an 8+ year old enterprise product whose analytics feature is one of its most beloved, had no such email in 2015. The reason? Simply put, those emails tend to suck.<br><br>
+      <p>If you use enterprise SaaS products, I’d wager that the majority of them have some sort of daily/weekly/monthly summary email. Even some consumer products are getting in on the action. It may come as a surprise then that Wistia, an 8+ year old enterprise product whose analytics feature is one of its most beloved, had no such email in 2015. The reason? Simply put, those emails tend to suck.<br><br>
 
-      While the idea seems compelling, the execution usually disappoints. A small, informal survey of Wistia employees and customers confirmed the hypothesis that had given us pause for all those years. When asked which product’s summary emails they actually opened—let alone acted upon—a dismal few could name even one.</p><br>
+      While the idea is compelling, the execution usually disappoints. A small, informal survey of Wistia employees and customers confirmed the hypothesis that had given us pause for all those years. When asked which productss summary emails they actually opened—let alone acted upon—a dismal few could name even one.</p><br>
 
       <h5>The Problem</h5>
       <p>Still, the idea remained compelling! Wistia customers had requested such an email, and we couldn’t help wondering: do product summary emails really have to suck? Could Wistia create one that was truly valuable for our users, and if so, what should it look like? My task was to answer these questions and hopefully design an email to help users maintain a better high-level understanding of the activity happening around their videos (without having to constantly log in to dig through Stats).</p><br>
@@ -274,22 +272,22 @@
           <img src="images/statsreport2.png" class="u-max-full-width img_padding">
         </div>
         <div class="eight columns">
-          <br><br>
+          <br>
           <h5>The Solution</h5>
           <p>We ended up with a four-module design optimized for two of our core customers: marketers and videographers. The first module, Noteworthy Happenings, is a place to surface significant account activity changes or "data snacks" like a spike in views. Account Trends helps users keep a pulse on high level metrics from week to week. Latest Leads summarizes new emails that were collected using video email gates and serves as a gateway to the new Audience page. Finally, Top Videos shows the top performers for the week—whether they're old standbys or breakout hits.<br><br> 
 
           This design omits a section we initially thought to be crucial: New Videos. User testing revealed an interesting pattern—most users closely monitored new videos in the first day or two after uploading. By the time they'd receive this email at the end of the week, the data for new videos would be old news.<br><br>
 
-          The graphic choices were largely made by balancing technical feasibility and UX payoff. In lieu of engineering-intensive components like custom-generated images, I opted for short pieces of text and a small number of reusable icons. Video thumbnails were the exception because they are so helpful in aiding user recall. The result is a visual design that hopefully feels lightweight, easy to digest, on brand, and compelling.<br><br>
+          The graphic choices were largely made by balancing technical feasibility and UX payoff. In lieu of engineering-intensive components like custom-generated images, I opted for text and a small number of reusable icons. Video thumbnails were the exception because they are so helpful in aiding user recall. The result is a visual design that hopefully feels lightweight, easy to digest, on brand, and compelling.<br><br>
 
-          For production, we opted to release an even more pared-down version of the report—just Account Trends—in the spirit of shipping things quickly and gaining a further layer of user feedback. We hypothesized that if our final design choices were correct, users would be writing in requesting the sections we had yet to release. In the weeks since the beta Stats Report launched, our hypothesis has proved correct! Top Videos is the most hotly requested section, and next on our to-do list.<br><br>
+          For production, we opted to release an even more pared-down version of the report—just Account Trends—in the spirit of shipping things quickly and gaining a further layer of user feedback. We hypothesized that if our final design choices were correct, users would be writing in requesting the sections we had yet to release. In the weeks since the beta Stats Report launched, our hypothesis has proved correct! Top Videos is the most hotly requested section, and next on our to-do list.
           </p>
         </div>
       </div>
 
       <div class="row group">
         <div class="offset-by-two twelve columns">
-          <p> Early metrics are also promising—the email has seen a whopping 57.6% average open rate (compared to a 21.5% industry average according to Mailchimp) and almost no unsubscribes thus far. As we’d expected, click through rate is not as high as these other numbers because one of our goals was to surface useful account information in a direct, easily accessible form that may obviate the need to click through and log in every time. Even so, our 4% clickthrough rate outperforms the industry average of 2.44%. It's a strong starting point, and I'm hopeful that the Stats Report can continue to evolve into an even more useful tool as we continue to build out the full design.</p><br>
+          <p>Early metrics are also promising—the email has seen a whopping 57.6% average open rate (compared to a 21.5% industry average according to Mailchimp) and almost no unsubscribes thus far. As we’d expected, click through rate is not as high as these other numbers because one of our goals was to surface useful account information in a direct, easily accessible form that may obviate the need to click through and log in every time. Even so, our 4% clickthrough rate outperforms the industry average of 2.44%. It's a strong starting point, and I'm hopeful that the Stats Report can continue to evolve into an even more useful tool as we continue to build out the full design.</p><br>
           </section>
           <section id="takeaways" data-anchor="takeaways">
             <h4>Takeaways</h4>
